{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 225,
  "lineage": "24296a13-1103-0c4e-e297-4cfe83569638",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:network-acl/acl-0e520e3b2df3534f0",
            "default_network_acl_id": "acl-0e520e3b2df3534f0",
            "egress": [],
            "id": "acl-0e520e3b2df3534f0",
            "ingress": [],
            "owner_id": "659256778211",
            "subnet_ids": [],
            "tags": {
              "Name": "yourssu-project-develop-default-nacl"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-default-nacl"
            },
            "vpc_id": "vpc-04ba44125f4b48296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:route-table/rtb-03a0792c08b53c798",
            "default_route_table_id": "rtb-03a0792c08b53c798",
            "id": "rtb-03a0792c08b53c798",
            "owner_id": "659256778211",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yourssu-project-develop-default-rtb"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-default-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ba44125f4b48296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:security-group/sg-0e2252b3ffd296dd5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e2252b3ffd296dd5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "659256778211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yourssu-project-develop-default-sg"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-default-sg"
            },
            "vpc_id": "vpc-04ba44125f4b48296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aaa05b197c7fa815",
            "association_id": "eipassoc-0bdc19b3fc3fdeef2",
            "domain": "vpc",
            "id": "eipalloc-0aaa05b197c7fa815",
            "instance": "i-01123ea1f73aee164",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0629426c9a7853b76",
            "private_dns": "ip-10-0-0-103.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.103",
            "public_dns": "ec2-43-200-201-123.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.201.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "yourssu-project-develop-public"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-public"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.public",
            "aws_iam_role.public",
            "aws_instance.public",
            "aws_security_group.public_ec2",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051d287d02a19035f",
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:instance/i-01123ea1f73aee164",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "yourssu-project-develop-public-instanceprofile",
            "id": "i-01123ea1f73aee164",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yourssu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0629426c9a7853b76",
            "private_dns": "ip-10-0-0-103.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.103",
            "public_dns": "ec2-43-200-201-123.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.201.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "yourssu-project-develop-public"
                },
                "throughput": 125,
                "volume_id": "vol-0d5396fe071966440",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b679a995863dc0b",
            "tags": {
              "Name": "yourssu-project-develop-public-ec2"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008fe5276dcf62dd5"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.public",
            "aws_iam_role.public",
            "aws_security_group.public_ec2",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:internet-gateway/igw-04d85c6ae3dc65a8b",
            "id": "igw-04d85c6ae3dc65a8b",
            "owner_id": "659256778211",
            "tags": {
              "Name": "yourssu-project-develop-igw"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-igw"
            },
            "vpc_id": "vpc-04ba44125f4b48296"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:network-acl/acl-06d18175d65963475",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06d18175d65963475",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "659256778211",
            "subnet_ids": [
              "subnet-03b679a995863dc0b"
            ],
            "tags": {
              "Name": "yourssu-project-develop-public2-nacl"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-public2-nacl"
            },
            "vpc_id": "vpc-04ba44125f4b48296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:network-acl/acl-034f4972a5df79ae2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-034f4972a5df79ae2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "659256778211",
            "subnet_ids": [
              "subnet-011de601f534f1f79"
            ],
            "tags": {
              "Name": "yourssu-project-develop-public2-nacl"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-public2-nacl"
            },
            "vpc_id": "vpc-04ba44125f4b48296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04d85c6ae3dc65a8b",
            "id": "r-rtb-0526ee3cfbba71b671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0526ee3cfbba71b67",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04d85c6ae3dc65a8b",
            "id": "r-rtb-007f2eb77497624a81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-007f2eb77497624a8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:route-table/rtb-0526ee3cfbba71b67",
            "id": "rtb-0526ee3cfbba71b67",
            "owner_id": "659256778211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d85c6ae3dc65a8b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "yourssu-project-develop-public1-rtb"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-public1-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ba44125f4b48296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:route-table/rtb-007f2eb77497624a8",
            "id": "rtb-007f2eb77497624a8",
            "owner_id": "659256778211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d85c6ae3dc65a8b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "yourssu-project-develop-public2-rtb"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-public2-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ba44125f4b48296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0499bb4b273aea8",
            "route_table_id": "rtb-0526ee3cfbba71b67",
            "subnet_id": "subnet-03b679a995863dc0b"
          },
          "dependencies": [
            "aws_route_table.public1",
            "aws_subnet.public1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6218c77e9e38336",
            "route_table_id": "rtb-007f2eb77497624a8",
            "subnet_id": "subnet-011de601f534f1f79"
          },
          "dependencies": [
            "aws_route_table.public2",
            "aws_subnet.public2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:security-group/sg-008fe5276dcf62dd5",
            "description": "for public ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008fe5276dcf62dd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "yourssu-project-develop-public-sg",
            "name_prefix": "",
            "owner_id": "659256778211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yourssu-project-develop-public-sg"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ba44125f4b48296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:subnet/subnet-03b679a995863dc0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b679a995863dc0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "659256778211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yourssu-project-develop-public1-subnet"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-public1-subnet"
            },
            "vpc_id": "vpc-04ba44125f4b48296"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:subnet/subnet-011de601f534f1f79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011de601f534f1f79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "659256778211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yourssu-project-develop-public2-subnet"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-public2-subnet"
            },
            "vpc_id": "vpc-04ba44125f4b48296"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:659256778211:vpc/vpc-04ba44125f4b48296",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e520e3b2df3534f0",
            "default_route_table_id": "rtb-03a0792c08b53c798",
            "default_security_group_id": "sg-0e2252b3ffd296dd5",
            "dhcp_options_id": "dopt-06fd82fccd4c01770",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ba44125f4b48296",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a0792c08b53c798",
            "owner_id": "659256778211",
            "tags": {
              "Name": "yourssu-project-develop-vpc"
            },
            "tags_all": {
              "Name": "yourssu-project-develop-vpc"
            }
          }
        }
      ]
    }
  ]
}